Stopgap tablet format fix

--- a/src/scss/mobile/front.scss
+++ b/src/scss/mobile/front.scss
@@ -39,7 +39,7 @@
     }
 
     &.withMotifs .head {
-      height: 80vh;
+      height: 75vh;
       flex-shrink: 0;
       padding-top: 3vh;
     }
